Prevent grid cells from collapsing if a whole row is gifted or sold.
git-svn-id: svn+ssh://src.earth.threerings.net/everything/trunk@499 a9e240f3-4568-de11-90a4-003048321218

--- a/src/web/game.css
+++ b/src/web/game.css
@@ -324,6 +324,11 @@
   margin: 0px auto;
 }
 
+.grid .Cards .Cell {
+  min-width: 125px;
+  min-height: 150px;
+}
+
 .grid .Bold {
   font-weight: bold;
 }
